--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -1,3 +1,3 @@
-@import "~bootstrap/scss/bootstrap";
+@import "_bootstrap";
 $fa-font-path: "~font-awesome/fonts/";
 @import "~font-awesome/scss/font-awesome";
